--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ mediapipe==0.10.14
 ml-dtypes==0.4.0
 narwhals==1.4.0
 numpy==2.0.1
-opencv-contrib-python==4.10.0.84
+opencv-python-headless
 opt-einsum==3.3.0
 packaging==24.1
 pandas==2.2.2
