--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ pyOpenSSL==24.2.1
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
-rambg
+rembg
 referencing==0.35.1
 requests==2.32.3
 rich==13.7.1
