--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mediapipe
 matplotlib==3.9.2
 mdurl==0.1.2
 ml-dtypes==0.4.0
